<resources>
    <string name="app_name">Animal App</string>
    <string name="Button_CreateAccount">Create Account</string>
    <string name="Button_Logout">Logout</string>
    <string name="Text_fild_email_login" />
    <string name="Text_hint_email">Inserisci la tua email</string>
    <string name="Hint_password">inserisci la tua password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_home_login_logout">Login/logout</string>

    <!-- TODO queste sono le stringhe del profilo da modificare  -->

    <string name="job_success">Job Success</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Doing at the sweet spot between aesthetics and elegance to give life to your brand.My opinion belong to nobody but myself.</string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact</string>
    <string name="skills">Skills</string>
    <string name="ratings">Star Ratings</string>

    <string name="home">Torna alla Home</string>
    <string name="cerca">Cerca</string>
    <string name="il_mio_profilo">Il mio profilo</string>
    <string name="Text_dialog_AboutYou_Edit">Enter text about you</string>
    <string name="Back_Dialog">Back</string>
    <string name="title_activity_my_pets">Activity_MyPets</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- FONDAMENTALI -->
    <string name="api_key">AIzaSyBwQOqHuw4FUl_9Xw7oEZ1o7YCa5DM9thI</string>
    <string name="others">Others</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="dialog_select_photo">SelectPhoto</string>
    <string-array name="Specie_supportate">
        <item>Cane</item>
        <item>Gatto</item>
        <item>Coniglio</item>
    </string-array>
    <string-array name="Sex_supportate">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="CategorieExpanse">
        <item>Generale</item>
        <item>Cure</item>
        <item>Cibo</item>
        <item>Veterinario</item>
        <item>Toilettatura</item>
    </string-array>
    <string-array name="CategoryReport">
        <item>General</item>
        <item>Pets accommodation</item>
        <item>Talk</item>
        <item>For Fun</item>
        <item>Advisory</item>
        <item>Danger</item>
        <item>Abandonment</item>
        <item>Find</item>
        <item>Lost</item>
        <item>Adoption</item>
    </string-array>
    <string-array name="CategoryLibretto">
        <item>General</item>
        <item>Vaccinazione</item>
        <item>Sverminazione</item>
        <item>Sterilizzazione</item>
        <item>Intervento</item>
        <item>Controllo</item>
    </string-array>
    <string-array name="DiagnosiLib">
        <item>Non eseguito</item>
        <item>Completato</item>
        <item>Da rivedere</item>
        <item>Positiva</item>
        <item>Negativa</item>
    </string-array>


</resources>