<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/hamburger_menu"
        android:title="@string/profile" />

    <item
        android:id="@+id/menuNotification"
        android:icon="@drawable/hamburger_menu"
        android:title="@string/notification" />

    <item
        android:id="@+id/item2"
        android:icon="@drawable/hamburger_menu"
        android:title="@string/profile" />

    <item
        android:id="@+id/item3"
        android:icon="@drawable/hamburger_menu"
        android:title="@string/profile" />

    <item
        android:id="@+id/item1"
        android:icon="@drawable/hamburger_menu"
        android:title="@string/profile" />


    <item
       android:title="@string/others" >

        <menu>
            <item
                android:id="@+id/menuSettings"
                android:icon="@drawable/hamburger_menu"
                android:title="@string/settings" />

            <item
                android:id="@+id/menuSupport"
                android:icon="@drawable/hamburger_menu"
                android:title="@string/support" />

            <item
                android:id="@+id/item4"
                android:icon="@drawable/hamburger_menu"
                android:title="@string/profile" />

        </menu>

    </item>



</menu>